prevent scrollbar layout shift

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -1,3 +1,7 @@
+html {
+  scrollbar-gutter: stable;
+}
+
 .colorHeart {
   color: #da0037;
 }
